--- a/codeception.yml
+++ b/codeception.yml
@@ -2,7 +2,7 @@ namespace: SprykerTest
 paths:
     tests: tests
     support: .
-    log: tests/_output
+    output: tests/_output
     data: tests/_data
     envs: tests/_envs
 settings:
