TE-10886 Dynamic store. (#9457)
TE-10886 Release Dynamic Store

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "spryker/cart": "*",
         "spryker/code-sniffer": "*",
         "spryker/configurable-bundle": "*",
+        "spryker/container": "*",
         "spryker/customer": "*",
         "spryker/product": "*",
         "spryker/propel": "*",
