--- a/tests/SprykerTest/Zed/ConfigurableBundleCartsRestApi/codeception.yml
+++ b/tests/SprykerTest/Zed/ConfigurableBundleCartsRestApi/codeception.yml
@@ -28,3 +28,5 @@ suites:
                 - \SprykerTest\Shared\Product\Helper\ProductDataHelper
                 - \SprykerTest\Shared\Customer\Helper\CustomerDataHelper
                 - \SprykerTest\Shared\Quote\Helper\PersistentQuoteHelper
+                - \SprykerTest\Service\Container\Helper\ContainerHelper
+                - \SprykerTest\Shared\Store\Helper\StoreDependencyHelper
