CC-34501: Initialisation Order Amendment Process (#11163)
CC-34501 Initialisation Order Amendment Process

--- a/codeception.yml
+++ b/codeception.yml
@@ -1,4 +1,6 @@
-namespace: SprykerTest
+namespace: ConfigurableBundleCartsRestApi
+include:
+    - tests/SprykerTest/Zed/ConfigurableBundleCartsRestApi
 paths:
     tests: tests
     support: .
