--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=8.2",
         "spryker/carts-rest-api": "^5.7.0",
         "spryker/carts-rest-api-extension": "^1.5.0",
+        "spryker/configurable-bundle": "^2.5.0",
         "spryker/configurable-bundle-cart": "^1.3.0",
         "spryker/configurable-bundle-storage": "^2.1.0",
         "spryker/glossary-storage": "^1.5.0",
@@ -16,12 +17,12 @@
         "spryker/persistent-cart": "^3.4.0",
         "spryker/store": "^1.1.0",
         "spryker/symfony": "^3.0.0",
+        "spryker/transfer": "^3.25.0",
         "spryker/zed-request": "^3.0.0"
     },
     "require-dev": {
         "spryker/cart": "*",
         "spryker/code-sniffer": "*",
-        "spryker/configurable-bundle": "*",
         "spryker/container": "*",
         "spryker/customer": "*",
         "spryker/product": "*",
@@ -42,8 +43,8 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
-        "cs-check": "phpcs -p -s --standard=vendor/spryker/code-sniffer/Spryker/ruleset.xml src/ tests/",
-        "cs-fix": "phpcbf -p --standard=vendor/spryker/code-sniffer/Spryker/ruleset.xml src/ tests/"
+        "cs-check": "phpcs -p -s --standard=vendor/spryker/code-sniffer/SprykerStrict/ruleset.xml src/ tests/",
+        "cs-fix": "phpcbf -p --standard=vendor/spryker/code-sniffer/SprykerStrict/ruleset.xml src/ tests/"
     },
     "extra": {
         "branch-alias": {
